--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -3,6 +3,10 @@
 }
 .u-margin-bottom-big {
     margin-bottom: 7.5rem;
+
+    @include respond(tab-port) {
+        margin-bottom: 3rem;
+    }
 }
 .u-margin-bottom-medium {
     margin-bottom: 4.5rem;
@@ -21,6 +25,9 @@
 
 .u-width-flexbox-big{
     width: 81vw;
+    @include respond(tab-port) {
+        width: 100%;
+    }
 }
 .u-width-flexbox-medium {
     width: 75vw;
