--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -11,3 +11,43 @@
     justify-content: center;
     align-items: center;
 }
+
+
+//MEDIA QUERY MANAGER
+/*
+0 - 600px: phone;
+600 - 900px: Tablet portrait
+900 - 1200px: Tablet landscape
+1200 - 1800px is where our normal styles apply
+1800 +: big desktop
+*/
+
+
+// @mixin  respond-phone {
+//     @media screen and (max-width: 600px){
+//         @content;
+//     }
+// }
+
+/*
+$breadpoint argument choices:
+- phone
+- tab-port
+- tab-landscape
+- big-desktop
+*/
+
+@mixin respond($breakpoint) {
+    @if $breakpoint == phone {
+        @media only screen and (max-width: 600px){ @content };
+    }
+    @if $breakpoint == tab-port {
+        @media only screen and (max-width: 900px){ @content };
+    }
+    @if $breakpoint == tab-land {
+        @media only screen and (max-width: 1200px){ @content };
+    }
+    @if $breakpoint == big-desktop {
+        @media only screen and (min-width: 1800px){ @content };
+    }
+}
