--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -5,7 +5,6 @@ body {
     line-height: 1.7; /*行高*/
     color: $color-grey-dark;
     /* padding:30px; */
-    padding: 3rem;
 }
 .heading-primary {
     /* display: flex;
@@ -19,6 +18,8 @@ body {
     /* margin-bottom:60px; */
     margin-bottom: 6rem;
 
+  
+
 
     &--main {
         /* font-size: 60px; */
@@ -27,8 +28,14 @@ body {
         letter-spacing: 3rem;
         font-weight: 400;
         animation: main 1.5s ease;
-    }
 
+
+        @include respond(phone) {
+            letter-spacing: 1.2rem;
+            font-size: 4.5rem;
+        }
+    }
+    
     &--sub {
         /* font-size: 20px; */
         font-size: 2rem;
@@ -36,6 +43,13 @@ body {
         letter-spacing: 1.71rem;
         font-weight: 400;
         animation: sub 1.5s ease;
+        
+        @include respond(phone) {
+            letter-spacing: .6rem;
+            font-size: 1.2rem;
+        }
+
+        
     }
 
 }
@@ -53,6 +67,14 @@ body {
     color:transparent;
     letter-spacing: .2rem;
     transition: all .3s;
+
+    @include respond(tab-port) {
+        font-size: 3rem;
+        
+    }
+    @include respond(phone) {
+        font-size: 2.7rem;
+    }
 
     &:hover {
         transform: skewY(2deg) skewX(15deg) scale(1.1);
