--- a/sass/layouts/_flex.scss
+++ b/sass/layouts/_flex.scss
@@ -58,16 +58,30 @@
         }
     }
 }
+
+
+
 .flexbox {
     display: flex;
     // background: black;
     margin: 0 auto;
+
+    @include respond(tab-port) {
+        flex-direction: column;
+        align-items: center;
+    }
     // border: 3px solid black;
     &-text {
         width: 48%;
+        @include respond(tab-port) {
+            width: 100%;
+        }
     }
     &-img{
         width: 48%;
+        @include respond(tab-port) {
+            width: 100%;
+        }
     }
 }
 .flex-between {
