--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,15 +1,38 @@
 .header {
-    height: 95vh;
+    height: 85vh;
     background-image:linear-gradient(45deg,
     rgba($color-primary-light,0.8),
     rgba($color-primary-dark,0.8)),
-    url(../img/hero.jpg);
+    url(../img/hero-small.jpg);
     /*linear-gradient還有可使用 to top|right|bottom|left*/
     background-size: cover;
     background-position: top; /*再縮放時看得出差異 top|bottom|center*/
-    clip-path: polygon(0 0,100% 0,100% 75vh,0% 100%);
+    
     position: relative;
 
+    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+        clip-path: polygon(0 0,100% 0,100% 75vh,0% 100%);
+        -webkit-clip-path: polygon(0 0,100% 0,100% 75vh,0% 100%);
+        height: 95vh;
+    }
+
+
+
+
+    @media (min-resolution: 192dpi) and (min-width: 600px),
+           (-webkit-min-device-pixel-ratio: 2) and (min-width: 600px),
+           (min-width: 2000px)  {
+        background-image:linear-gradient(45deg,
+        rgba($color-primary-light,0.8),
+        rgba($color-primary-dark,0.8)),
+        url(../img/hero.jpg);
+    }
+    
+    
+    @include respond(tab-port) {
+        clip-path: polygon(0 0,100% 0,100% 81vh,0 100%);
+        -webkit-clip-path: polygon(0 0,100% 0,100% 81vh,0 100%);
+    }
 
     &__logo-box {
         position: absolute;
