--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,10 +1,13 @@
 .section-about {
     // @include flexcenter;
     background-color: $color-gery-light;
-    height: 95vh;  //on desktop computer
+    // height: 95vh;  //on desktop computer
     // background: black;
-    padding:15rem 0;
+    padding:24rem 0;
     margin-top: -20vh;
+    @include respond(tab-port) {
+        padding: 20rem 0 51rem 0;
+    }
     // clip-path: polygon(0 20vh,100% 0%,100% 87vh,0% 100%);
 }
 .section-features {
@@ -21,6 +24,15 @@
     
     & > * {
         transform: skewY(7deg);
+
+        @include respond(tab-port) {
+            // transform: skewY(0deg);
+        }
+    }
+
+    @include respond(tab-port) {
+        padding: 45rem 0;
+        // transform: skewY(0deg);
     }
     }
     
@@ -28,11 +40,18 @@
     padding: 25rem 0 6rem 0;
     background-color: $color-gery-light;
     margin-top: -10rem;
+
+    @include respond(tab-port) {
+        padding: 18rem 0 6rem 0;
+    }
 }
 .section-stories {
     position: relative;
     padding: 15rem 0;
     // background-color: $color-gery-light;
+    @include respond(tab-port) {
+        padding: 12rem;
+    }
 }
 .section-book {
     padding: 15rem 0;
@@ -46,13 +65,36 @@
                                       rgba(0,0,0,0) 50%),
                                       url(../../img/nat-10.jpg);
     background-size: cover;
-    height: 42rem;
+    // height: 42rem;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4.5rem rgba($color-black,.3);
 
+    @include respond(tab-land) {
+        background-image: linear-gradient(105deg,
+        rgba($color-white,.9) 0%,
+        rgba($color-white,.9) 65%,
+        rgba(0,0,0,0) 65%),
+        url(../../img/nat-10.jpg);
+        background-size: cover;
+    }
+    
+    @include respond(tab-port) {
+        background-image: linear-gradient(105deg,
+        rgba($color-white,.9) 0%,
+        rgba($color-white,.9) 100%),
+        url(../../img/nat-10.jpg);
+    }
     &__form {
         width: 50%;
         padding: 4.5rem;
+
+        @include respond(tab-land) {
+            width: 65%;
+        }
+        
+        @include respond(tab-port) {
+            width: 100%;
+        }
     }
 
     /*也可以用另一個div達到效果*/
