--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -373,11 +373,11 @@ body {
     clip-path: polygon(0 0, 100% 0, 100% 87%, 0% 100%);
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 87%, 0% 100%); }
     .section-tours__card-picture-1 {
-      background-image: linear-gradient(-120deg, #ffb900, #ff7730), url(../../img/nat-5.jpg); }
+      background-image: linear-gradient(-120deg, #ffb900, #ff7730), url(../img/nat-5.jpg); }
     .section-tours__card-picture-2 {
-      background-image: linear-gradient(-120deg, #7ed56f, #28b485), url(../../img/nat-6.jpg); }
+      background-image: linear-gradient(-120deg, #7ed56f, #28b485), url(../img/nat-6.jpg); }
     .section-tours__card-picture-3 {
-      background-image: linear-gradient(-120deg, #2998ff, #5643fa), url(../../img/nat-7.jpg); }
+      background-image: linear-gradient(-120deg, #2998ff, #5643fa), url(../img/nat-7.jpg); }
   .section-tours__card-heading {
     font-size: 2.7rem;
     font-weight: 300;
