--- a/sass/components/_section-tours__card.scss
+++ b/sass/components/_section-tours__card.scss
@@ -63,18 +63,32 @@
         background-blend-mode: screen;
         clip-path: polygon(0 0,100% 0,100% 87%,0% 100%);
         -webkit-clip-path: polygon(0 0,100% 0,100% 87%,0% 100%);
+        // &-1 {
+        //     background-image:linear-gradient(-120deg,$color-secondary-light,$color-secondary-dark),
+        //     url(../../img/nat-5.jpg);
+        // }
+        // &-2 {
+        //     background-image:linear-gradient(-120deg,$color-primary-light,$color-primary-dark),
+        //     url(../../img/nat-6.jpg);
+            
+        // }
+        // &-3 {
+        //     background-image:linear-gradient(-120deg,$color-tertiary-light,$color-tertiary-dark),
+        //     url(../../img/nat-7.jpg);
+
+        // }
         &-1 {
             background-image:linear-gradient(-120deg,$color-secondary-light,$color-secondary-dark),
-            url(../../img/nat-5.jpg);
+            url(../img/nat-5.jpg);
         }
         &-2 {
             background-image:linear-gradient(-120deg,$color-primary-light,$color-primary-dark),
-            url(../../img/nat-6.jpg);
+            url(../img/nat-6.jpg);
             
         }
         &-3 {
             background-image:linear-gradient(-120deg,$color-tertiary-light,$color-tertiary-dark),
-            url(../../img/nat-7.jpg);
+            url(../img/nat-7.jpg);
 
         }
     }
