--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -63,7 +63,7 @@
                                       rgba($color-white,.9) 0%,
                                       rgba($color-white,.9) 50%,
                                       rgba(0,0,0,0) 50%),
-                                      url(../../img/nat-10.jpg);
+                                      url(../img/nat-10.jpg);
     background-size: cover;
     // height: 42rem;
     border-radius: 3px;
@@ -74,7 +74,7 @@
         rgba($color-white,.9) 0%,
         rgba($color-white,.9) 65%,
         rgba(0,0,0,0) 65%),
-        url(../../img/nat-10.jpg);
+        url(../img/nat-10.jpg);
         background-size: cover;
     }
     
@@ -82,7 +82,7 @@
         background-image: linear-gradient(105deg,
         rgba($color-white,.9) 0%,
         rgba($color-white,.9) 100%),
-        url(../../img/nat-10.jpg);
+        url(../img/nat-10.jpg);
     }
     &__form {
         width: 50%;
